--- a/Die-Meteoriten/full-text-german.tex
+++ b/Die-Meteoriten/full-text-german.tex
@@ -3,10 +3,9 @@
 % Load encoding definitions (after font package)
 \usepackage[LGR,T1]{fontenc}
 \usepackage{textalpha}
-
+\usepackage{longtable}
 \usepackage{listings}
 \lstset{basicstyle=\ttfamily}
-
 % Babel package:
 \usepackage{babel}
 
@@ -212,271 +211,361 @@ Wien, den 23. Februar 1843.
 \begin{center}
 Frankreich.
 \end{center}
-48\. Agen, Dépt. Lot et Garonne.
-
-1\. Alais, Dépt. du Gard.
-
-44\. Apt, Dépt. de Vaucluse.
-
-50\. Asco, Insel Korsika.
-
-64\. Barbotan (und Roquefort) ehemals Gascogne, Dépt. du Gers (und Dépt. des Landes).
-
-18\. Chantonnay, Dépt. de la Vendee.
-
-60\. Charsonville, Dépt. du Loiret.
-
-4\. Chassigny, Dépt. de la haute Marne.
-
-46\. Château-Renard, Dépt. du Loiret.
-
-15\. Ensisheim, ehemals Elsass, jetzt Dépt. du Haut-Rhin.
-
-8\. Jonzac, Dépt. de la Charente inferieure.
-
-5\. Juvenas, Dépt. de l'Ardeche.
-
-22\. La Baffe, Dépt. des Vosges.
-
-16\. L'Aigle, ehemals Normandie, Dépt. de l'Orne.
-
-17\. Liponas, Dépt. de l'Ain.
-
-30\. Lucé, Dépt. de la Sarthe.
-
-47\. Salés, Dépt. du Rhone.
-
-2\. Simonod, Dépt. de l'Ain.
-
-51\. Toulouse, Dépt. de la Haute-Garonne.
-
-45\. Vouillé, Dépt. de la Vienne.
-
+\begin{itemize}
+    \small
+    \item[48.] Agen, Dépt. Lot et Garonne.
+    \item[1.] Alais, Dépt. du Gard.
+    \item[44.] Apt, Dépt. de Vaucluse.
+    \item[50.] Asco, Insel Korsika.
+    \item[64.] Barbotan (und Roquefort) ehemals Gascogne, Dépt. du Gers (und Dépt. des Landes).
+    \item[18.] Chantonnay, Dépt. de la Vendée.
+    \item[60.] Charsonville, Dépt. du Loiret.
+    \item[4.] Chassigny, Dépt. de la haute Marne.
+    \item[46.] Château-Renard, Dépt. du Loiret.
+    \item[15.] Ensisheim, ehemals Elsass, jetzt Dépt. du Haut-Rhin.
+    \item[8.] Jonzac, Dépt. de la Charente inferieure.
+    \item[5.] Juvenas, Dépt. de l'Ardeche.
+    \item[22.] La Baffe, Dépt. des Vosges.
+    \item[16.] L'Aigle, ehemals Normandie, Dépt. de l'Orne.
+    \item[17.] Liponas, Dépt. de l'Ain.
+    \item[30.] Lucé, Dépt. de la Sarthe.
+    \item[47.] Salés, Dépt. du Rhone.
+    \item[2.] Simonod, Dépt. de l'Ain.
+    \item[51] Toulouse, Dépt. de la Haute-Garonne.
+    \item[45] Vouillé, Dépt. de la Vienne.
+\end{itemize}
+\begin{center}
 England.
-
-41\. Wold-Cottage, Yorkshire.
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[41.] Wold-Cottage, Yorkshire.
+\end{itemize}
+\begin{center}
 Schottland.
-
-42\. High-Possil, Glasgow.
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[42.] High-Possil, Glasgow.
+\end{itemize}
+\begin{center}
 Irland.
-
-56\. Mooresfort, Grafschaft Tipperary.
-
-54\. Adair, Grafschaft Limerick.
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[56.] Mooresfort, Grafschaft Tipperary.
+    \item[54.] Adair, Grafschaft Limerick.
+\end{itemize}
+\begin{center}
 Spanien.
-
-43\. Berlanguillas, Alt-Kastilien.
-
-63\. Sigena, Aragonien.
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[43.] Berlanguillas, Alt-Kastilien.
+    \item[63.] Sigena, Aragonien.
+\end{itemize}
+\begin{center}
 Italien.
-
-13\. Casignano, Herzogtum Parma.
-
-19\. Renazzo, Provinz Ferrara, Kirchenstaat.
-
-14\. Siena, Toskana.
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[13.] Casignano, Herzogtum Parma.
+    \item[19.] Renazzo, Provinz Ferrara, Kirchenstaat.
+    \item[14.] Siena, Toskana.
+\end{itemize}
+\begin{center}
 Deutschland.
-
-59\. Tabor, ehemals Bechiner, jetzt Taborer Kreis, Böhmen.
-
-67\. Zebrak, Berauner Kreis, Böhmen.
-
-31\. Lissa, Bunzlauer Kreis, Böhmen.
-
-6\. Stannern, Iglauer Kreis, Mähren.
-
-52\. Blansko, Brünner Kreis, Mähren.
-
-53\. Wessely, Hradischer Kreis, Mähren.
-
-28\. Mauerkirchen, ehemals Bayern, jetzt Inn-Kreis, Ober-Österreich.
-
-12\. Mässing, Unter-Donau-Kreis, Niederbaiern.
-
-65\. Eichstädt, Regenkreis, Franken, Baiern.
-
-36\. Politz bei Gera, Fürstentum Reuß.
-
-26\. Erxleben, Regierungsbezirk Magdeburg, preußische Provinz Sachsen.
-
-55\. Grüneberg, Regierungsbezirk Liegnitz, Provinz Schlesien.
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[59.] Tabor, ehemals Bechiner, jetzt Taborer Kreis, Böhmen.
+    \item[67.] Zebrak, Berauner Kreis, Böhmen.
+    \item[31.] Lissa, Bunzlauer Kreis, Böhmen.
+    \item[6.] Stannern, Iglauer Kreis, Mähren.
+    \item[52.] Blansko, Brünner Kreis, Mähren.
+    \item[53.] Wessely, Hradischer Kreis, Mähren.
+    \item[28.] Mauerkirchen, ehemals Bayern, jetzt Inn-Kreis, Ober-Österreich.
+    \item[12.] Mässing, Unter-Donau-Kreis, Niederbaiern.
+    \item[65.] Eichstädt, Regenkreis, Franken, Baiern.
+    \item[36.] Politz bei Gera, Fürstentum Reuß.
+    \item[26.] Erxleben, Regierungsbezirk Magdeburg, preußische Provinz Sachsen.
+    \item[55.] Grüneberg, Regierungsbezirk Liegnitz, Provinz Schlesien.
+\end{itemize}
+\begin{center}
 Ungarn.
-
-66\. Groß-Divina, Trentschiner-Komitat.
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[66.] Groß-Divina, Trentschiner-Komitat.
+\end{itemize}
+\begin{center}
 Kroatien.
-
-39\. Milena, Warasdiner-Komitat.
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[39.] Milena, Warasdiner-Komitat.
+\end{itemize}
+\begin{center}
 Russland.
-
-35\. Bachmut, Gouv. Ekaterinoslaw.
-
-9\. Bialistock, gleichnamige Provinz.
-
-33\. Charkow, gleichnamiges Gouvernement.
-
-25\. Krasno-Ugol, Gouv. Räsan.
-
-37\. Kuleschofka, Gouv. Poltawa.
-
-57\. Kursk, (Gouv.)
-
-58\. Lixna, Dünaburger Kreis, Gouv. Witepsk.
-
-10\. Lontalax, Finnland.
-
-24\. Poltawa (Gouv.)
-
-27\. Simbirsk (Gouv.)
-
-38\. Slobodka, Gouv. Smolensk.
-
-68\. Timochin, Gouv. Smolensk.
-
-34\. Zaborzika, Gouv. Wolhynien.
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[35.] Bachmut, Gouv. Ekaterinoslaw.
+    \item[9.] Bialistock, gleichnamige Provinz.
+    \item[33.] Charkow, gleichnamiges Gouvernement.
+    \item[25.] Krasno-Ugol, Gouv. Räsan.
+    \item[37.] Kuleschofka, Gouv. Poltawa.
+    \item[57.] Kursk (Gouv.)
+    \item[58.] Lixna, Dünaburger Kreis, Gouv. Witepsk.
+    \item[10.] Lontalax, Finnland.
+    \item[24.] Poltawa (Gouv.)
+    \item[27.] Simbirsk (Gouv.)
+    \item[38.] Slobodka, Gouv. Smolensk.
+    \item[68.] Timochin, Gouv. Smolensk.
+    \item[34.] Zaborzika, Gouv. Wolhynien.
+\end{itemize}
+\begin{center}
 Türkei.
-
-7\. Konstantinopel.
-
-62\. Seres, Makedonien.
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[7.] Konstantinopel.
+    \item[62.] Seres, Makedonien.
+\end{itemize}
 \subsubsection{Asien.}
-
-61\. Doroninsk, Gouv. Irkutsk, Sibirien.
-
-23\. Benares, Bengalen, Ostindien.
-
+\begin{itemize}
+    \small
+    \item[61.] Doroninsk, Gouv. Irkutsk, Sibirien.
+    \item[23.] Benares, Bengalen, Ostindien.
+\end{itemize}
 \subsubsection{Afrika.}
-
-3\. Kapland (Bokkeveld bei Tulpagh).
-
+\begin{itemize}
+    \small
+    \item[3.] Kapland (Bokkeveld bei Tulpagh).
+\end{itemize}
 \subsubsection{Amerika.}
-
-11\. Nobleborough, Maine, Vereinigte Staaten von Nord-Amerika.
-
-21\. Weston, Connecticut, Vereinigte Staaten von Nord-Amerika.
-
-49\. Nanjemoy, Maryland, Vereinigte Staaten von Nord-Amerika.
-
-20\. Richmond, Virginien, Vereinigte Staaten von Nord-Amerika.
-
-29\. Nashville, Tennessee, Vereinigte Staaten von Nord-Amerika.
-
-40\. Forsyth, Georgien, Vereinigte Staaten von Nord-Amerika.
-
-69\. Macao, Provinz Rio grande do Norte, Brasilien.
-
+\begin{itemize}
+    \small
+    \item[11.] Nobleborough, Maine, Vereinigte Staaten von Nord-Amerika.
+    \item[21.] Weston, Connecticut, Vereinigte Staaten von Nord-Amerika.
+    \item[49.] Nanjemoy, Maryland, Vereinigte Staaten von Nord-Amerika.
+    \item[20.] Richmond, Virginien, Vereinigte Staaten von Nord-Amerika.
+    \item[29.] Nashville, Tennessee, Vereinigte Staaten von Nord-Amerika.
+    \item[40.] Forsyth, Georgien, Vereinigte Staaten von Nord-Amerika.
+    \item[69.] Macao, Provinz Rio grande do Norte, Brasilien.
+\end{itemize}
 \subsubsection{Australien.}
-
-32\. Owahu, eine der Sandwich-Inseln.
-
-\subsection{1\. Meteoreisen.}
-
-\subsubsection{A\. Europa}
-
+\begin{itemize}
+    \small
+    \item[32.] Owahu, eine der Sandwich-Inseln.
+\end{itemize}
+\subsection{Meteoreisen.}
+\subsubsection{Europa}
+\begin{center}
 Frankreich.
-
-82\. Caille, Dépt. du Var.
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[82.] Caille, Dépt. du Var.
+\end{itemize}
+\begin{center}
 Deutschland.
-
-76\. Elbogen, Elbogner Kreis, Böhmen.
-
-85\. Bohumilitz, Prachiner Kreis, Böhmen.
-
-73\. Sachsen (Steinbach bei Eibenstock im Erzgebirgischen Kreise oder Grimma ? im Leipziger Kreise).
-
-74\. Bitburg, Regierungsbezirk Trier, Rheinpreußen.
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[76.] Elbogen, Elbogner Kreis, Böhmen.
+    \item[85.] Bohumilitz, Prachiner Kreis, Böhmen.
+    \item[73.] Sachsen (Steinbach bei Eibenstock im Erzgebirgischen Kreise oder Grimma ? im Leipziger Kreise).
+    \item[74.] Bitburg, Regierungsbezirk Trier, Rheinpreußen.
+\end{itemize}
+\begin{center}
 Ungarn.
-
-78\. Lenarto, Saroscher Komitat.
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[78.] Lenarto, Saroscher Komitat.
+\end{itemize}
+\begin{center}
 Kroatien.
-
-77\. Agram, Agramer Komitat.
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[77.] Agram, Agramer Komitat.
+\end{itemize}
+\begin{center}
 Russland.
-
-72\. Brahin, Gouv. Minsk, ehemals Litauen.
-
-\subsubsection{B\. Asien.}
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[72.] Brahin, Gouv. Minsk, ehemals Litauen.
+\end{itemize}
+\subsubsection{Asien.}
+\begin{center}
 Sibirien.
-
-71\. Krasnojarsk, Gouv. Jeniseisk.
-
-\subsubsection{C\. Afrika.}
-
-90\. Senegambien (am oberen Teil des Senegalstromes).
-
-91\. Kap der guten Hoffnung (zwischen dem Sonntags- und Boschesmannsflüsse).
-
-\subsubsection{D\. Amerika.}
-
-94\. Grönland (Baffingsbay)
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[71.] Krasnojarsk, Gouv. Jeniseisk.
+\end{itemize}
+\subsubsection{Afrika.}
+\begin{itemize}
+    \small
+    \item[90.] Senegambien (am oberen Teil des Senegalstromes).
+    \item[91.] Kap der guten Hoffnung (zwischen dem Sonntags- und Boschesmannsflüsse).
+\end{itemize}
+\subsubsection{Amerika.}
+\begin{itemize}
+    \small
+    \item[94.] Grönland (Baffingsbay)
+\end{itemize}
+\begin{center}
 Vereinigte Staaten von Nord-Amerika.
-
-84\. Tennessee. (Cocke-County in Staate Tennessee).
-
-83\. Ashville, Nord-Carolina.
-
-81\. Guilford, Nord-Carolina.
-
-92\. Clairborne, Staat Alabama.
-
-79\. Louisiana oder Texas ? (am Red-River oder roten Flüsse).
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[84.] Tennessee. (Cocke-County in Staate Tennessee).
+    \item[83.] Ashville, Nord-Carolina.
+    \item[81.] Guilford, Nord-Carolina.
+    \item[92.] Clairborne, Staat Alabama.
+    \item[79.] Louisiana oder Texas ? (am Red-River oder roten Flüsse). 
+\end{itemize}
+\begin{center}
 Vereinigte Mexikanische Bundesstaaten.
-
-80\. Durango, im gleichnamigen Staate.
-
-87\. Zacatecas, im gleichnamigen Staate.
-
-75\. Toluca, (Xiquipilio, im Staate Mexiko).
-
-93\. Oaxaca, (in der Misteca, im Staate Oaxaca).
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[80.] Durango, im gleichnamigen Staate.
+    \item[87.] Zacatecas, im gleichnamigen Staate.
+    \item[75.] Toluca, (Xiquipilio, im Staate Mexiko).
+    \item[93.] Oaxaca, (in der Misteca, im Staate Oaxaca).
+\end{itemize}
+\begin{center}
 Columbien. (Neu-Granada.)
-
-88\. Rasgatà, nordöstlich von Santa Fe de Bogotá.
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[88.] Rasgatà, nordöstlich von Santa Fe de Bogotá.
+\end{itemize}
+\begin{center}
 Bolivia. (ehemals Peru.)
-
-70\. Atacama. (Wüste Atacama, an der Grenze von Chili).
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[70.] Atacama. (Wüste Atacama, an der Grenze von Chili).
+\end{itemize}
+\begin{center}
 Brasilien.
-
-86\. Bahia, am Bache Bemdegò bei Monte Santo, Capitanie Bahia.
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[86.] Bahia, am Bache Bemdegò bei Monte Santo, Capitanie Bahia.
+\end{itemize}
+\begin{center}
 Vereinigte Staaten am Rio de la Plata.
-
-89\. Tucuman. (Otumpa, im Staate Tucuman.)
-
+\end{center}
+\begin{itemize}
+    \small
+    \item[89.] Tucuman. (Otumpa, im Staate Tucuman.)
+\end{itemize}
+\clearpage
 \section{Übersicht der Meteoriten im k. k. Mineralien-Kabinette, nach der Zeitfolge ihres Niederfallens.}
-
+\begin{center}
+\small
 (Die Nummern beziehen sich auf die Reihenfolge in der Übersicht Nr. 1, und dienen zur Erleichterung des Aufsuchens im vorliegenden Kataloge.)
-
- 
+\end{center}
+\begin{center}
+    \footnotesize
+    \begin{longtable}{|p{6mm}|p{9mm}|p{60mm}|p{27mm}|}
+    \hline
+        Nr. & Jahr & Monat und Tag &   \\ \hline
+        ~ & ~ & ~ & \textbf{1. Meteorsteine.} \\ \hline
+        15 & 1492 & 7. November & Ensisheim. \\ \hline
+        59 & 1753 & 3. Juli & Tabor. \\ \hline
+        17 & 1753 & September & Liponas. \\ \hline
+        30 & 1768 & 13. September & Lucé. \\ \hline
+        28 & 1768 & 20. November & Mauerkirchen. \\ \hline
+        63 & 1773 & 17. November & Sigena. \\ \hline
+        65 & 1785 & 19. Februar & Eichstädt. \\ \hline
+        33 & 1787 & 1. Oktober & Charkow. \\ \hline
+        64 & 1790 & 24. Juli & Barbotan. \\ \hline
+        14 & 1794 & 16. Juni & Siena. \\ \hline
+        41 & 1795 & 13. Dezember & Yorkshire. \\ \hline
+        47 & 1798 & 8. oder 12. Marz & Salés. \\ \hline
+        23 & 1798 & 13. Dezember & Benares. \\ \hline
+        16 & 1803 & 6. April & L’Aigle \\ \hline
+        44 & 1803 & 8. Oktober & Apt. \\ \hline
+        12 & 1803 & 13. Dezember & Massing \\ \hline
+        42 & 1804 & 5. April & Glasgow \\ \hline
+        61 & 1805 & 25. Marz & Doroninsk \\ \hline
+        7 & 1805 & Juni & Konstantinopel \\ \hline
+        50 & 1805 & November & Asco. \\ \hline
+        1 & 1806 & 15. Marz & Alais. \\ \hline
+        68 & 1807 & 13. Marz & Timochin. \\ \hline
+        21 & 1807 & 14. Dezember & Weston. \\ \hline
+        13 & 1808 & 19. April & Parma. \\ \hline
+        6 & 1808 & 22. Mai & Stannern. \\ \hline
+        31 & 1808 & 3. September & Lissa. \\ \hline
+        56 & 1810 & August & Tipperary. \\ \hline
+        60 & 1810 & 23. November & Charsonville. \\ \hline
+        37 & 1811 & zwischen d. 12. u. 13. Marz um Mitternacht & Kuleschofka. \\ \hline
+        43 & 1811 & 8. Juli & Berlanguillas. \\ \hline
+        51 & 1812 & 12. April & Toulouse. \\ \hline
+        26 & 1812 & 15. April & Erxleben. \\ \hline
+        18 & 1812 & 5. August & Chantonnay. \\ \hline
+        54 & 1813 & 10. September & Limerick. \\ \hline
+        10 & 1813 & 13. Dezember & Lontalax. \\ \hline
+        35 & 1814 & 3. Februar & Bachmut. \\ \hline
+        48 & 1814 & 5. September & Agen. \\ \hline
+        4 & 1815 & 3. Oktober & Chassigny. \\ \hline
+        34 & 1818 & 30. Marz & Zaborzika. \\ \hline
+        62 & 1818 & Juni & Seres. \\ \hline
+        38 & 1818 & 10. August & Slobodka. \\ \hline
+        8 & 1819 & 13. Juni & Jonzac. \\ \hline
+        36 & 1819 & 13. Oktober & Poliz. \\ \hline
+        58 & 1820 & 12. Juli & Lixna. \\ \hline
+        5 & 1821 & 15. Juni & Juvenas. \\ \hline
+        22 & 1822 & 13. September & La Baffe. \\ \hline
+        11 & 1823 & 7. August & Nobleborough. \\ \hline
+        19 & 1824 & 15. Januar & Renazzo. \\ \hline
+        67 & 1824 & 14. Oktober & Zebrak. \\ \hline
+        49 & 1825 & 10. Februar & Nanjemoy. \\ \hline
+        32 & 1825 & 14. September & Owahu. \\ \hline
+        29 & 1827 & 9. Mai & Nashville. \\ \hline
+        9 & 1827 & 5. oder 6. Oktober & Bialistock. \\ \hline
+        20 & 1828 & 4. Juni & Richmond. \\ \hline
+        40 & 1829 & 8. Mai & Forsyth. \\ \hline
+        25 & 1829 & 9. September & Krasno-Ugol. \\ \hline
+        45 & 1831 & 18. Juli (nach anderen Angaben 13. Mai) & Vouillé. \\ \hline
+        53 & 1831 & 9. September & Wessely. \\ \hline
+        52 & 1833 & 25. November & Blansko. \\ \hline
+        2 & 1835 & 13. November & Simonod. \\ \hline
+        69 & 1836 & 11. November (nach anderen Angaben 11. Dezember & Macao. \\ \hline
+        66 & 1837 & 24. Juli & Groß-Divina. \\ \hline
+        3 & 1838 & 13. Oktober & Kapland. \\ \hline
+        55 & 1841 & 22. Marz & Grüneberg. \\ \hline
+        46 & 1841 & 12. Juni & Château-Renard. \\ \hline
+        39 & 1842 & 26. April & Milena. \\ \hline
+        24 & ~ & Die Fallzeit unbekannt. & Gouv. Poltawa. \\ \hline
+        57 & ~ & Die Fallzeit unbekannt. & Gouv. Kursk. \\ \hline
+        27 & ~ & Die Fallzeit unbekannt. & Gouv. Simbirsk. \\ \hline
+        ~ & ~ & ~ & \textbf{2. Meteoreisen.} \\ \hline
+        77 & 1751 & 26. Mai & Agram. \\ \hline
+        70 bis 76 & ~ & Die Fallzeit unbekannt. & Alle andern Eisenmassen. \\ \hline
+        76 & ~ & Die Fallzeit unbekannt. & Alle andern Eisenmassen. \\ \hline
+        78 bis 94 & ~ & Die Fallzeit unbekannt. & Alle andern Eisenmassen. \\ \hline
+        94 & ~ & Die Fallzeit unbekannt. & Alle andern Eisenmassen. \\ \hline
+    \end{longtable}
+\end{center}
 \clearpage
 \section{Wegweiser.}
 \paragraph{}
 Die Meteoriten-Sammlung des k. k. Mineralien-Kabinettes ist in einem langen pultförmigen Glasschrank, mit nach zwei Seiten abfallenden Glaswänden, in der Mitte des vierten Saales aufgestellt. Auf der waagerechten Ebene des Glasschrankes erheben sich, nach der Länge desselben ziehend, jedoch beiderseits noch Raum lassend, drei breite niedere Stufen, wodurch im Ganzen fünf Abteilungen entstehen. Die obere oder zweite, beiden Seiten des Pult-Schrankes gemeinschaftliche Stufe, (mit Abteilung Nr. 1 bezeichnet) enthält die größten Stücke, deren Volum eine systematische Einreihung unter die anderen nicht erlaubte, nämlich die zwei berühmten großen Eisenmassen von Elbogen und Agram, große Stücke der Eisenmassen von Atacama, Lenarto, Bohumilitz, Bahia und Krasnojarsk, einen großen ganzen Meteorstein von Tabor, einen solchen von Wessely, und einen von Lissa, drei große ganze Steine von Stannern, ein großes Fragment des Steines von Chantonnay und zwei große ganze Steine von L’Aigle (letztere zwei auf der Rückseite des Schrankes). Die Reihenfolge der nach ihren Verwandtschaften zusammengestellten Meteoriten kleineren Formates beginnt in der vorderen, gegen den dritten Saal des Mineralien-Kabinettes gekehrten Hälfte des Schrankes; hier sind auf der untersten, mit Nr. 2 bezeichneten Abteilung, auf der Ebene des Schrankes, unterhalb der ersten Stufe die Meteorsteine, welche kein gediegenes Eisen enthalten (Nr. 1 bis 12 der Tabelle Nr. 1.) aufgestellt; von da wendet sich die Reihe auf die Rückseite des Glasschrankes, der auf der ersten Stufe (Abteilung Nr. 3) und in der Abteilung unterhalb derselben (Abteilung Nr.4) auf einem ausgedehnten Raume die anderen, weit zahlreicheren Meteorsteine, welche gediegenes Eisen einschließen (von Nr. 13 bis 69 der Tabelle Nr. 1.) enthält. Die Reihe springt von der Abteilung Nr. 4 nun wieder auf die Vorderseite des Glasschrankes, wo die erste Stufe, mit Abteilung Nr.5 bezeichnet, die kleineren Stücke von Meteoreisen trägt; Anfangs die ästigen mit Olivin (von Nr. 70 bis 73), darauf die derben oder formlosen (von Nr. 74 bis 94), womit die Sammlung endet. — Alle Stücke liegen auf ovalen, weiß lackierten, mit goldenen Leisten gezierten Untersätzen von verschiedener Größe und Höhe, auf welchen eine Etiquette den Namen der Lokalität, das Falljahr, und wenn (wie bei allen Eisenmassen, mit alleiniger Ausnahme der Agramer) die Fallzeit nicht bekannt ist, die Zeit ihrer Auffindung oder Bekanntwerdung angibt. Die bei jeder Lokalität mit Nr. 1 beginnenden Nummern auf den Untersätzen beziehen sich auf die Beschreibung der Lokalität, sowohl in dem Kabinetts- als dem vorliegenden gedruckten Kataloge.
-
-\section{1\. Meteorsteine.}
-
-Nr\. 1 bis 69.
-
-\subsection{1\. Alais.}
+\clearpage
+\section{Meteorsteine.}
+\begin{center}
+Nr. 1 bis 69.
+\end{center}
+\subsection{Alais.}
 
 St. Etienne de Lolm und Valence, Dépt. du Gard, Frankreich.
 
@@ -488,7 +577,7 @@ Bräunlich schwarze, teils bröckliche und zerreibliche, teils (durch Zerreibung
 
 *) Die hier und bei allen anderen Lokalitäten von Meteoriten befindlichen Zahlen bedeuten das Jahr und die Nummer des Acquisitions-Postens, dann die Nummer des Stückes in dem respektiven Acquisitions-Posten der Kabinetts-Kataloge.
 
-\subsection{2\. Simonod.}
+\subsection{Simonod.}
 
 \clearpage
 \end{document}
