--- a/Die-Meteoriten/full-text-german.tex
+++ b/Die-Meteoriten/full-text-german.tex
@@ -566,18 +566,26 @@ Die Meteoriten-Sammlung des k. k. Mineralien-Kabinettes ist in einem langen pult
 Nr. 1 bis 69.
 \end{center}
 \subsection{Alais.}
-
+\begin{center}
+\small
 St. Etienne de Lolm und Valence, Dépt. du Gard, Frankreich.
 
-15\. Mai 1806, 5 Uhr Abends.
-
+15. Mai 1806, 5 Uhr Abends.
+\end{center}
+\paragraph{}
 Bräunlich schwarze, teils bröckliche und zerreibliche, teils (durch Zerreibung entstandene) pulverige Substanz, hie und da mit weißen Salz-Effloreszierungen (nach Berzelius: Bittersalz mit Nickelvitriol), in welcher selbst mittelst der Lupe weder kugelige Ausscheidungen, noch gediegenes Eisen und Magnetkies (die jedoch den Analysen zufolge in sehr kleiner Menge vorhanden sind), unterschieden werden können.
 
-1\. Größere und kleinere Bröckchen, mit Pulver vermischt und, bis auf zwei, ohne Rindensubstanz; von einem der zwei allda gefallenen, und alsbald zerbröckelten Steine, die zusammen 12 Pfund wogen. — Etwas über 3/32 Loth oder 25 1/2 Gran — 1816. 35. 44, und 1838. 27. 2.* — Teils aus der Mineralien-Sammlung des Marquis de Drée in Paris durch den Direktor der vereinigten k. k. Hof-Naturalien-Kabinette, Carl von Schreibers, in Tausch erhalten, teils von Herrn Gubernialrat Neumann in Prag eingetauscht.
-
-*) Die hier und bei allen anderen Lokalitäten von Meteoriten befindlichen Zahlen bedeuten das Jahr und die Nummer des Acquisitions-Postens, dann die Nummer des Stückes in dem respektiven Acquisitions-Posten der Kabinetts-Kataloge.
-
+1. Größere und kleinere Bröckchen, mit Pulver vermischt und, bis auf zwei, ohne Rindensubstanz; von einem der zwei allda gefallenen, und alsbald zerbröckelten Steine, die zusammen 12 Pfund wogen. — Etwas über $\frac{3}{32}$ Loth oder $25\frac{1}{2}$ Gran — 1816. 35. 44, und 1838. 27. 2.\footnote{Die hier und bei allen anderen Lokalitäten von Meteoriten befindlichen Zahlen bedeuten das Jahr und die Nummer des Acquisitions-Postens, dann die Nummer des Stückes in dem respektiven Acquisitions-Posten der Kabinetts-Kataloge.} — Teils aus der Mineralien-Sammlung des Marquis de Drée in Paris durch den Direktor der vereinigten k. k. Hof-Naturalien-Kabinette, Karl von Schreibers, in Tausch erhalten, teils von Herrn Gubernialrat Neumann in Prag eingetauscht.
 \subsection{Simonod.}
+\begin{center}
+\small
+Gemeinde Belmont, Arrondissement Belley, Dép. de l’Ain, Frankreich.
 
+13. November 1835, 9 Uhr Abends.
+\end{center}
+\paragraph{}
+1. Kleine, eckige und scharfkantige Fragmentchen, samtschwarz, schwach glänzend, von Fettglanz, spröde, schwer zerreiblich, vollkommen homogen aussehend; von einem der zwei allda gefallenen etwa eigroßen Steine, die wohl bald in kleine Fragmente zerfallen sind. — $\frac{3}{32}$ Loth und 4 Gran. — 1840. 28. 1. — Von Herrn Marquis de Drée in Paris in Tausch erhalten. Marquis de Drée erhielt die Substanz durch einen Gendarmerie-Beamten des Dép. de l'Ain.
+
+Ob die Fragmentchen von Simonod oder Belley wirklich einer mit Detonation zersprungenen Feuerkugel, die einen wahren, überrindeten Meteorstein gab, angehören, oder Produkt einer Sternschnuppe sind, ist noch zweifelhaft. Die Nacht des Falles war eine der Sternschnuppen-Nächte. Herr Millet d’Aubenton berichtete Herrn Arago, dass er zu der oben angegebenen Zeit ein Feuermeteor beobachtete, welches in der Gemeinde Belmont zersprang, und zwar über Häusern und Strohdächern, die es entzündete. Derselbe will auch zwei eigroße Stücke gefunden haben, die ganz die Beschaffenheit eines Aerolithen besaßen. — Später hat Herr Millet Stücke davon der Pariser Akademie übersendet. Er schrieb dabei, dass sie im Allgemeinen das Ansehen von Obsidian haben (was ganz richtig ist), dass der Magnet kleine Metallkügelchen davon ausziehe, bestehend aus Eisen, Schwefel, Kupfer, Arsenik und vielleicht Silber?! (was wir in unseren Fragmentchen nicht finden konnten). Er glaubte auch Spuren von Nickel und Chrom darin gefunden zu haben, Die eingesendeten Stücke sind von der Pariser Akademie Hrn. Dumas zur Analyse übergeben worden. (Siehe Poggendorffs Annalen B. 36. S. 562 und Bd. 37. S. 460.) — Nach einer Mittheilung, die wir Herrn Marquis de Drée verdanken, fand Herr Damour darin Kieselerde, Eisenoxyd, Kupferoxyd, Schwefel, Kohle und Kalk. — Merkwürdig ist das spezifische Gewicht dieser Fragmente‚ nämlich 1,35. (nach einer Wiegung von Herren Rumler) das geringste von allen bekannten Meteorsteinen.
 \clearpage
 \end{document}
