--- a/Die-Meteoriten/full-text-german.tex
+++ b/Die-Meteoriten/full-text-german.tex
@@ -599,7 +599,7 @@ Bokkeveld bei Tulpagh, 70 englische Meilen von der Kapstadt, am Vorgebirge der g
 In die schwarze, matte, durch den Strich Glanz erlangende, weiche und milde Grundmasse sind weißliche und grünliche, undeutliche Körner (die wie Flecken aussehen und wenig Körper zu haben scheinen) eingemengt; gediegen Eisen und Schwefelkies sind nicht sichtbar. — Ein höchst eigentümlicher Meteorstein.
 
 Fragment mit etwas Rinde; von einem großen, einzeln gefallenen Steine von einigen Zentnern an Gewicht, der in viele Trümmer zersprang. — $\frac{3}{8}$ Loth. — 1842. 36. 1. — Von dem kaiserl. russischen Minister in Hamburg, geheimen Rath von Struve, in Tausch erhalten. Dieser bekam das Fragment von Professor Mayer, der es vom Kap mitbrachte.
-\subsection{Chassigny,}
+\subsection[Chassigny.]{Chassigny,}
 \begin{center}
 \small
 unweit Langres, Dép. de la Haute-Marne, Frankreich.
@@ -768,7 +768,7 @@ Friederichshamm, Switaipola (nach Chladni Sawotaipola), Gouv. Wiburg, Finnland.
 Lichtgraue, körnige, wenig zusammenhängende Grundmasse, angefüllt mit Einmengungen von kleinen, olivengrünen, dann schwärzlichen, eckigen, selten rundlichen Körnern, die vorwaltend sind und dem Ganzen ein porphyr- oder breccienartiges Aussehen geben, endlich weißen feldspatartigen Körnern. Ein Korn von Magnetkies ist deutlich wahrnehmbar, sonst scheint derselbe fein eingesprengt zu sein. Die Rinde glänzend, aderig.
 
 1. Bruchstück von einem der mehreren allda gefallenen, aber bei dem Schmelzen des Eises meist in einen See versunkenen Steine; etwa die Hälfte eines kleinen Steines; mit Rinde und einer geschnittenen Fläche. — 1 Loth, schwach. — 1832. 30. 1. — Von dem verstorbenen Grafen Gregor von Razoumovsky in Tausch erhalten.
-\subsection{Nobleborough,}
+\subsection[Nobleborough.]{Nobleborough,}
 \begin{center}
 \small
 oder Nobleboro, im Staate Maine, in den vereinigten Staaten von Nord-Amerika.
@@ -809,7 +809,7 @@ Zwei Bruchstücke von einem der allda in größerer Anzahl gefallenen Steine.
 1. Bruchstück mit Rinde und einer anpolierten Fläche. — 3 19/32 Loth. — 1816. 31. 33. c. — Auf Vermittlung des Direktors von Schreibers während seiner Anwesenheit zu Paris im Jahre 1815, durch Tausch aus dem königl. Museum der Naturgeschichte erhalten.
 
 2. Kleines Bruchstück mit Rinde und einer nicht polierten Schnittfläche. — 1 Loth — 1841. 14. 11. — Aus der Heuland'schen Meteoriten-Sammlung durch Herrn Pötschke gekauft. Stammt aus der Mineralien-Sammlung des Marquis de Drée. (Durch Verwechslung mit dem Fallorte Berlanguillas erhalten, passt aber an das vom Pariser Museum erhaltene Stück Nr. 1 an, ist also davon in Paris abgebrochen worden.)
-\subsection{Siena,}
+\subsection[Siena.]{Siena,}
 \begin{center}
 \small
 im Großherzogtum Toskana.
@@ -834,7 +834,7 @@ Drei vollkommen ganze, aber sehr kleine, dann drei ganze, aber angebrochene oder
 6. Ein größeres Bruchstück (etwas mehr als die Hälfte eines Steines), mit einer Bruch- und einer anpolierten Fläche. — Beschrieben und abgebildet in v. Schreibers Beiträgen, S. 14, Taf. 2. und S. 61, Taf 7. — 1 3/4 Lth. — 1809. 20. 1. — Vom Obersten von Tihavsky als Geschenk erhalten.
 
 7. Ein größerer, fast ganzer Stein, mit einer Schnitt- und einer polierten Fläche, auch einer Bruchfläche mit zwei Vertiefungen, worin sich eine schwarze Substanz zeigt, Die Rinde zum Teil mit Eindrücken. — 6 1/32 Lth. — 1822. 20. 1. — Durch Herrn Chierici aus Florenz zu Kauf erhalten.
-\subsection{Ensisheim,}
+\subsection[Ensisheim.]{Ensisheim,}
 \begin{center}
 \small
 im ehemaligen Elsass, jetzt Dép. du Haut-Rhin, Frankreich.
@@ -893,7 +893,7 @@ Dreizehn Stücke von den sehr vielen (2000 bis 3000) der allda gefallenen Steine
 11. Ansehnliches Bruchstück, mit großer, frischer Bruchfläche, welche das in der Beschreibung erwähnte aderige Gewebe, wodurch ein marmoriertes oder breccienartiges Ansehen entsteht, deutlich wahrnehmen lässt; mit Rinde, — 13 3/4 Loth — 1843. 29. 1. — Von Hrn. Francois Marguier in Tausch erhalten.
 
 Die Meteorsteine von L’Aigle sind die verbreitetsten und gemeinsten in Mineralien-Sammlungen. Ein Mineralien-Händler in Paris, Herr Lambotin, kaufte davon so viel auf, als er in L’Aigle und der Umgegend zusammenbringen konnte. Lange war der Preis derselben 8 bis 10 Francs für die Unze. Jetzt ist davon in Paris nichts mehr zu erhalten.
-\subsection{Liponas,}
+\subsection[Liponas.]{Liponas,}
 \begin{center}
 \small
 (in Chladni, vielleicht durch einen Druckfehler, unrichtig Laponas) bei Pont de Vesle und Bourg en Bresse, Dépt. de l'Ain, Frankreich.
@@ -929,7 +929,7 @@ Ein großes und drei kleinere Fragmente von einem einzeln gefallenen Steine von 
 3. Frisches Bruchstück, ganz schwarz, zum Teil verrostet, mit einer undeutlichen Ablösungsfläche. — 12 23/32 Loth. — 1834. 19. 12. — Von Herrn Doktor Bondi in Dresden gekauft.
 
 4. Kleines Bruchstück, grau und schwarz gefleckt; ohne Rinde, — 2 1/32 Loth. — Aus den Doubletten. — Von Herrn G. B. Sowerby Sohn in London erhalten.
-\subsection{Renazzo,}
+\subsection[Renazzo.]{Renazzo,}
 \begin{center}
 \small
 bei Cento, Provinz Ferrara, im Kirchenstaate.
@@ -961,7 +961,7 @@ Drei Bruchstücke von einem einzeln gefallenen Steine von 4 Pfund.
 2. Bruchstück ohne Rinde, — 3 21/32 Loth. — 1834. 31. 21. — Durch Baron Lederer, k. k. General-Konsul in New-York, in Tausch erhalten.
 
 3. Kleines Bruchstück mit einer anpolierten Fläche. — 1/2 Loth. — Von 1830. 11. 14. — Ebenfalls durch Baron Lederer aus Nord-Amerika in Tausch erhalten.
-\subsection{Weston,}
+\subsection[Weston.]{Weston,}
 \begin{center}
 \small
 im Staate Connecticut, Nord-Amerika,
@@ -982,7 +982,7 @@ Fünf Fragmente von ungleicher Beschaffenheit von den sehr vielen und mitunter s
 4. Kleines Fragment mit etwas Rinde. Lichtgraue Grundmasse mit Rostflecken; die kugligen Ausscheidungen nicht sehr deutlich; das metallische Eisen und der Magnetkies fein eingesprengt. — 1 11/32 Loth. — 1821. 50. 42. — Durch Baron Lederer, k. k. General-Konsul in New-York, von Dr. Mitchill in Tausch erhalten.
 
 5. Kleines Fragment ohne Rinde; die Grundmasse teils hellgrau mit Rostflecken, teils dunkelgrau mit kugligen Ausscheidungen. — 1 7/32 Loth. — 1812. 13. 7. — Mit Nr. 2 von dem verstorbenen Mineralien-Händler Barton eingetauscht. —
-\subsection{La Baffe,}
+\subsection[La Baffe.]{La Baffe,}
 \begin{center}
 \small
 2 Lieues südlich von Épinal, Dépt. des Vosges, Frankreich.
@@ -1034,7 +1034,7 @@ Dunkelaschgraue Grundmasse, ganz erfüllt mit einer Menge von kugligen, zuweilen
 Dunkelgraue Grundmasse, etwas dunkler, als bei dem Steine aus dem Gouv. Poltava, mit welchem der Meteorit von Krasno-Ugol fast vollkommen identisch ist; nur zeigt das kleine Fragment keine größeren Ausscheidungen von Magnetkies; auch ist die Rinde etwas verschieden, weniger porös und mehr glatt.
 
 1. Fragment mit Rinde und einer anpolierten Fläche — 19/32 Loth. — 1839. 28. 1. — Von der Mineralien-Sammlung der königl. Universität zu Berlin durch Herrn Professor Weiss in Tausch erhalten. Wurde von dem dort aufbewahrten Fragment abgeschnitten, welches diese Universität aus der Sammlung der kaiserl. Akademie der Wissenschaften in Petersburg durch Herrn Professor Kupffer erhielt.
-\subsection{Erxleben,}
+\subsection[Erxleben.]{Erxleben,}
 \begin{center}
 \small
 zwischen Magdeburg und Helmstädt, preußische Provinz Sachsen.
