--- a/Die-Meteoriten/full-text-german.tex
+++ b/Die-Meteoriten/full-text-german.tex
@@ -5,6 +5,11 @@
 \usepackage{wasysym}
 \usepackage{textalpha}
 \usepackage{longtable}
+
+\usepackage{graphicx}
+\graphicspath{ {./} }
+\usepackage[figurename=]{caption}
+
 \usepackage{listings}
 \lstset{basicstyle=\ttfamily}
 % Babel package:
@@ -2895,6 +2900,11 @@ w. dass von Charcas in Mexico (Chladni S. 337) mit anderen bekannten mexikanisch
 \section{Erkl"arung der Abbildung.}
 \paragraph{}
 Die auf der Abbildung dargestellten Widmanst"attenschen Figuren (siehe die Anmerkung auf Seite 100 des vorliegenden Werkes) sind durch "Atzen der polierten Schnittfl"ache eines St"uckes Meteoreisen von Lenarto in Ungarn erhalten worden. Es ist dies das gr"o"ste St"uck von dieser Lokalit"at in der Meteoriten-Sammlung des k. k. Mineralien-Kabinettes und in dem vorliegenden beschreibenden Verzeichnisse Seite 108 unter Nummer 1 angezeigt, Um die Zeichnung des Originals zu vervielf"altigen, ist von der mit Salpeters"aure ge"atzten Fl"ache desselben ein Gipsabguss gemacht und in diesen die Metall-Legierung (Blei, Zinn und Antimon) ausgegossen worden. Dadurch wurde eine dem Originale vollkommen "ahnliche Platte gewonnen, und von dieser sodann die Abdr"ucke auf Papier abgezogen.
+\clearpage
+\begin{figure}[b]
+\centering
+\includegraphics[width=\textwidth,keepaspectratio]{Fig1.png}
+\end{figure}
 \clearpage
 \section{Verwandtschafts-Tabelle der Meteoriten.}
 \subsection{Meteorsteine.}
